--- a/.github/workflows/label-pr.yml
+++ b/.github/workflows/label-pr.yml
@@ -6,7 +6,8 @@ on:
 jobs:
   pr-labeler:
     permissions:
-      pull-requests: write
+      contents: read # for TimonVS/pr-labeler-action to read config file
+      pull-requests: write # for TimonVS/pr-labeler-action to add labels in PR
     runs-on: ubuntu-latest
     steps:
       - uses: TimonVS/pr-labeler-action@v4
