--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,8 +8,7 @@ jobs:
     name: runner / standardrb
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - name: standardrb
         uses: adrianthedev/action-standardrb@master
         with:
