--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,34 +11,20 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Get yarn cache directory path
-      id: production-yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-
-    - uses: actions/cache@v3
-      id: production-yarn-cache
-      with:
-        path: ${{ steps.production-yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-production-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-production-yarn-
-
-    - name: Yarn install
-      run: yarn install
-
-    - name: Get gem version
-      id: gem_version
-      run: |
-        echo "::set-output name=tag::$(sed "s|refs/tags/v||" <<< ${{ github.ref }})"
-
     - name: Get release notes
+      uses: actions/github-script@v6
       id: get_release_notes
-      run: |
-        echo "::set-output name=release_notes::$(node .github/get-release-notes-from-draft.js ${{github.repository}} ${{secrets.GITHUB_TOKEN}})"
+        with:
+          script: |
+            const {data: releases} = await github.rest.repos.listReleases({
+              owner,
+              repo,
+            });
+            return releases.find((r) => r.draft)?.draft || ""
 
     - name: Create Release
       id: create_release
-      if: ${{steps.get_release_notes.outputs.release_notes != ''}}
+      if: ${{steps.get_release_notes.outputs.result != ''}}
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -46,7 +32,7 @@ jobs:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
         body: |
-          ${{fromJson(steps.get_release_notes.outputs.release_notes)}}
+          ${{fromJson(steps.get_release_notes.outputs.result)}}
         draft: false
         prerelease: false
 
