--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -45,3 +45,5 @@ template: |
   ## Release notes
 
   $CHANGES
+
+  For more information, check out [Avo's release notes page](https://avohq.io/releases)
