--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -12,17 +12,6 @@ env:
 jobs:
   feature_specs:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby:
-          - '3.2.0'
-        rails:
-          - '6.0'
-          - '6.1'
-
-    env:
-      RAILS_VERSION: ${{matrix.rails}}
-      BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/rails_${{ matrix.rails }}_ruby_${{ matrix.ruby }}.gemfile
 
     steps:
     - uses: actions/checkout@v3
@@ -31,7 +20,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         bundler: default
-        ruby-version: ${{ matrix.ruby }}
+        ruby-version: 3.2.0
 
     - uses: actions/cache@v3
       with:
@@ -78,5 +67,5 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: always() && steps.run_tests.outcome == 'failure'
       with:
-        name: rspec_failed_screenshots_rails_${{ matrix.rails }}_ruby_${{ matrix.ruby }}
+        name: rspec_failed_screenshots_rails
         path: ./spec/dummy/tmp/screenshots
