--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -30,8 +30,13 @@ jobs:
           ${{ runner.os }}-test-gems-${{ hashFiles('**/Gemfile.lock') }}
 
     - name: "Clone Avo"
-      # This need to be changed to avo repo after the launch
-      run: git clone git@github.com:avo-hq/avo-3.git ./../avo
+      uses: actions/checkout@v3
+      with:
+        repository: avo-hq/avo-3
+        path: "./.."
+      # # This need to be changed to avo repo after the launch
+      # # AVO_CLONE_KEY
+      # run: git clone git@github.com:avo-hq/avo-3.git ./../avo
 
     - name: Bundle install
       run: |
