--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -29,14 +29,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-test-gems-${{ hashFiles('**/Gemfile.lock') }}
 
-    - name: "Clone Avo"
+    - name: Clone Avo
       uses: actions/checkout@v3
       with:
         repository: avo-hq/avo-3
-        path: "./.."
+        path: avo
       # # This need to be changed to avo repo after the launch
       # # AVO_CLONE_KEY
       # run: git clone git@github.com:avo-hq/avo-3.git ./../avo
+    - name: Move Avo up one folder
+      run: mv ./avo ./../avo
 
     - name: Bundle install
       run: |
