fixed base workflows

--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -32,11 +32,10 @@ jobs:
     - name: Clone Avo
       uses: actions/checkout@v3
       with:
+        # This need to be changed to avo repo after the launch
         repository: avo-hq/avo-3
         path: avo
-      # # This need to be changed to avo repo after the launch
-      # # AVO_CLONE_KEY
-      # run: git clone git@github.com:avo-hq/avo-3.git ./../avo
+        token: ${{ secrets.AVO_CLONE_KEY }}
 
     - name: Move Avo up one folder
       run: mv ./avo ./../avo
@@ -45,6 +44,12 @@ jobs:
       run: |
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
+
+    - name: Compile Avo assets (development mode)
+      run: |
+        cd ../avo
+        yarn install
+        yarn build
 
     - name: Setup DB
       run: bin/rails db:setup
