--- a/gems.yml
+++ b/gems.yml
@@ -1,11 +1,12 @@
 gems:
   avo: "./avo"
+  avo_advanced: "./avo_advanced"
+  avo_pro: "./avo_pro"
+  avo_authorization: "./avo_authorization"
   avo_filters: "./avo_filters"
   avo_dashboards: "./avo_dashboards"
-  avo_authorization: "./avo_authorization"
   avo_menu: "./avo_menu"
-  prommy: "./prommy"
-  avo_pro: "./avo_pro"
   avo_nested_resources: "./avo_nested_resources"
   avo_searchable_associations: "./avo_searchable_associations"
   avo_scopes: "./avo_scopes"
+  prommy: "./prommy"
