--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -67,7 +67,7 @@ jobs:
         yarn build
 
     - name: Setup DB
-      run: bin/rails db:setup
+      run: bin/rails db:migrate:reset
 
     - name: Get yarn cache directory path
       id: test-yarn-cache-dir-path
