--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -66,7 +66,7 @@ jobs:
         yarn build
 
     - name: Setup DB
-      run: bin/rails db:setup
+      run: bin/rails db:migrate:reset
 
     - name: Get yarn cache directory path
       id: test-yarn-cache-dir-path
