--- a/gems.yml
+++ b/gems.yml
@@ -5,4 +5,4 @@ gems:
   avo_filters: "./avo_filters"
   avo_dashboards: "./avo_dashboards"
   avo_menu: "./avo_menu"
-  prommy: "./prommy"
+  testy: "./testy"
