--- a/docker/Dockerfile.avo
+++ b/docker/Dockerfile.avo
@@ -26,27 +26,23 @@ COPY ./avo/yarn.lock /avo/
 COPY ./avo/pluggy /avo/pluggy
 
 # RUN ls -la /avo
-
+RUN bundle config set --local without 'development:test'
 RUN bundle install --jobs 4 --retry 3
 RUN yarn install
 
 # Re-run bundle install with the appropriate version number
 COPY ./avo/lib/avo/version.rb /avo/lib/avo/version.rb
-# Remove gems used to test things locally
-RUN bundle config set --local without 'development:test'
 
 # Copy the files
 COPY ./avo /avo
 
-COPY ./testy /testy
+# COPY ./testy /testy
 COPY ./avo-pro /avo-pro
 COPY ./avo-advanced /avo-advanced
 COPY ./avo-dashboards /avo-dashboards
 COPY ./avo-dynamic_filters /avo-dynamic_filters
 COPY ./avo-menu /avo-menu
 COPY ./avo_nested_resources /avo_nested_resources
-COPY ./support /support
-RUN ls -la /avo_dashboards
 
 # Run the install again
 RUN bundle install --jobs 4 --retry 3
