--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -67,6 +67,7 @@ jobs:
     - name: Compile Avo assets (development mode)
       run: |
         cd ../avo
+        bundle install
         bin/rails avo:sym_link
         yarn install
         yarn build
