--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -40,7 +40,7 @@ jobs:
         ruby-version: 3.2.0
 
     - name: Add AVO_GEM_TOKEN
-      run: bundle config set --global https://packager.dev/avo-hq-beta/ ${{secrets.AVO_GEM_TOKEN}}
+      run: bundle config set --global https://packager.dev/avo-hq/ ${{secrets.AVO_GEM_TOKEN}}
 
     - uses: actions/cache@v3
       with:
