--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,7 +30,7 @@ RUN ls -la /${NAME}/lib
 RUN ls -la /${NAME}/lib/avo
 RUN ls -la /${NAME}/lib/avo/${NAME}
 
-RUN bundle config set --global https://packager.dev/avo-hq-beta/ ${BUNDLER_TOKEN}
+RUN bundle config set --global https://packager.dev/avo-hq/ ${BUNDLER_TOKEN}
 RUN bundle config set --local without 'development test'
 RUN bundle install --jobs 4 --retry 3
 RUN yarn install
