--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,7 +36,7 @@ jobs:
           ruby-version: 3.3.0
 
       - name: erb-lint
-        uses: reviewdog/action-erblint@v1
+        uses: tk0miya/action-erblint@v1
         with:
           github_token: ${{ secrets.github_token }}
 
