--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,9 +40,27 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
 
+  check-eslint-config:
+    runs-on: ubuntu-latest
+    outputs:
+      file_exists: ${{ steps.check_file.outputs.file_exists }}
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Check for .eslintrc.json
+      id: check_file
+      run: |
+        if [ -f .eslintrc.json ]; then
+          echo "file_exists=true" >> $GITHUB_ENV
+        else
+          echo "file_exists=false" >> $GITHUB_ENV
+        fi
+
   eslint:
     name: runner / eslint
     runs-on: ubuntu-latest
+    if: github.env.file_exists == 'true'
     steps:
       - uses: actions/checkout@v1
       - name: Check for eslint config
