--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -22,6 +22,15 @@ env:
 
 jobs:
   feature_specs:
+    strategy:
+      matrix:
+        ruby:
+          - '3.1.4'
+          - '3.3.0'
+        rails:
+          - '6.1'
+          - '7.1'
+          - '8.0'
     runs-on: ubuntu-latest
 
     services:
