--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -21,6 +21,15 @@ env:
 
 jobs:
   system_specs:
+    strategy:
+        matrix:
+          ruby:
+            - '3.1.4'
+            - '3.3.0'
+          rails:
+            - '6.1'
+            - '7.1'
+            - '8.0'
     runs-on: ubuntu-latest
 
     services:
