--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -27,8 +27,7 @@ jobs:
             - '3.1.4'
             - '3.3.0'
           rails:
-            - '6.1'
-            - '7.1'
+            - '7.2.0.beta2'
     runs-on: ubuntu-latest
 
     env:
