update labeler with dx

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -8,3 +8,4 @@ style: ["style/*", "*style/*"]
 ci: ["ci/*", "*ci/*"]
 perf: ["perf/*", "*perf/*"]
 fixed-branch: ["fixed-branch-name", "*fixed-branch-name"]
+"Developer Experience (DX)": ["dx/*"]
