replace ref with head_ref

--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -64,14 +64,14 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-test-gems-${{ hashFiles('**/Gemfile.lock') }}
 
-    - name: Clone Avo from "${{ github.ref }}"
+    - name: Clone Avo from "${{ github.head_ref }}"
       id: checkout_avo_branch
       uses: actions/checkout@v4
       with:
         repository: avo-hq/avo
         path: avo
         token: ${{ secrets.AVO_CLONE_KEY }}
-        ref: ${{ github.ref }}
+        ref: ${{ github.head_ref }}
         continue-on-error: true  # Continue even if this step fails
 
     - name: Clone Avo from "main"
