--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -31,7 +31,13 @@ jobs:
             - '3.1.4'
             - '3.3.0'
           rails:
+            - '7.1'
             - '8.0'
+          exclude:
+            - ruby: '3.1.4'
+              rails: '8.0'
+            - ruby: '3.3.0'
+              rails: '7.1'
     runs-on: ubuntu-latest
 
     env:
