--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -22,6 +22,7 @@ env:
   POSTGRES_HOST: localhost
   POSTGRES_USERNAME: postgres
   POSTGRES_PORT: 5432
+  GH_TOKEN: ${{ secrets.AVO_CLONE_KEY }}
 
 jobs:
   system_specs:
