--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -4,7 +4,9 @@ on:
   workflow_call:
     inputs:
       AVO_DEPENDENCIES:
+        description: "Necessary avo repos for testing"
         required: false
+        type: string
     secrets:
       AVO_CLONE_KEY:
         required: true
