--- a/docker/Dockerfile.gems
+++ b/docker/Dockerfile.gems
@@ -1,3 +1,8 @@
 FROM avo_base
 
-COPY . /avo
+COPY ./avo /avo
+COPY ./avo-dashboards /avo-dashboards
+COPY ./avo-menu /avo-menu
+COPY ./avo-dynamic_filters /avo-dynamic_filters
+COPY ./avo-pro /avo-pro
+COPY ./avo-advanced /avo-advanced
