--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,30 +9,36 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Get release notes
-      uses: actions/github-script@v6
-      id: get_release_notes
-      with:
-        script: |
-          const {data: releases} = await github.rest.repos.listReleases({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-          });
-          return releases.find((r) => r.draft)?.body || "No draft release found."
+    # - name: Get release notes
+    #   uses: actions/github-script@v6
+    #   id: get_release_notes
+    #   with:
+    #     script: |
+    #       const {data: releases} = await github.rest.repos.listReleases({
+    #         owner: context.repo.owner,
+    #         repo: context.repo.repo,
+    #       });
+    #       return releases.find((r) => r.draft)?.body || "No draft release found."
 
-    - name: Create Release
-      id: create_release
-      if: ${{steps.get_release_notes.outputs.result != ''}}
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: |
-          ${{fromJson(steps.get_release_notes.outputs.result)}}
-        draft: false
-        prerelease: false
+    # - name: Create Release
+    #   id: create_release
+    #   if: ${{steps.get_release_notes.outputs.result != ''}}
+    #   uses: actions/create-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     tag_name: ${{ github.ref }}
+    #     release_name: Release ${{ github.ref }}
+    #     body: |
+    #       ${{fromJson(steps.get_release_notes.outputs.result)}}
+    #     draft: false
+    #     prerelease: false
 
     - name: Publish release on avohq.io
-      run: curl -X GET "https://avohq.io/releases/refresh_releases?secret=${{ secrets.REFRESH_RELEASES_SECRET }}"
+      shell: bash
+      env:
+        REFRESH_RELEASES_SECRET: ${{ secrets.REFRESH_RELEASES_SECRET }}
+      run: |
+        curl -X GET "https://avohq.io/releases/refresh_releases?secret=${REFRESH_RELEASES_SECRET}"
+        echo "Release published on avohq.io"
+        echo "secret: $REFRESH_RELEASES_SECRET"
