--- a/gems.yml
+++ b/gems.yml
@@ -5,5 +5,6 @@ gems:
   avo-dynamic_filters: "./avo-dynamic_filters"
   avo-dashboards: "./avo-dashboards"
   avo-menu: "./avo-menu"
+  avo-forms: "./avo-forms"
   avo-kanban: "./avo-kanban"
   testy: "./testy"
